--- a/app/src/main/res/layout-v21/fragment_viewer.xml
+++ b/app/src/main/res/layout-v21/fragment_viewer.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.hong.lu.ui.widget.webview.ProgressWebView
+    <com.hong.ui.widget.webview.ProgressWebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
