--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,18 +5,18 @@
         <item>相册</item>
     </string-array>
     <array name="language_array">
-        <item>English</item>
         <item>简体中文</item>
+       <!-- <item>English</item>
         <item>עִברִית</item>
         <item>Deutsch</item>
         <item>Hindi</item>
         <item>Português</item>
         <item>한국어</item>
-        <item>Español</item>
+        <item>Español</item>-->
     </array>
     <array name="language_id_array">
-        <item>en</item>
         <item>zh-rCN</item>
+        <item>en</item>
         <item>iw</item>
         <item>de</item>
         <item>hi</item>
