--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -13,10 +13,10 @@
         android:title="@string/theme_accent_color"
         android:key="accentColor"/>
 
-    <Preference
+   <!-- <Preference
         android:icon="@drawable/ic_one"
         android:title="@string/start_page"
-        android:key="startPage"/>
+        android:key="startPage"/>-->
 
     <SwitchPreference
         android:icon="@drawable/ic_http"
