--- a/app/src/main/res/layout-v21/fragment_viewer.xml
+++ b/app/src/main/res/layout-v21/fragment_viewer.xml
@@ -12,7 +12,8 @@
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:webview_background="?android:windowBackground"/>
+        android:layout_marginBottom="50dp"
+        app:webview_background="?android:windowBackground" />
 
     <ProgressBar
         android:id="@+id/loader"
@@ -24,5 +25,22 @@
         android:paddingEnd="@dimen/spacing_large"
         android:paddingStart="@dimen/spacing_large"
         tools:visibility="visible"/>
+    <include layout="@layout/url_error" />
 
+    <RelativeLayout
+        android:id="@+id/loading_over"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#E6E6E6"
+        android:gravity="center" >
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/online_error_btn_retry"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="5dp"
+            android:text="正在获取数据..."
+            android:textColor="#737373" />
+    </RelativeLayout>
 </FrameLayout>
