--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-
+    <color name="bt_bg_no">#f8f8f8</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="white">#FFFFFF</color>
 
