--- a/app/src/main/res/layout/nav_drawer_header.xml
+++ b/app/src/main/res/layout/nav_drawer_header.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/mail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="An android client for GitHub."
+                android:text="3333333333333333333333333"
                 android:lines="1"/>
         </LinearLayout>
 
