--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -50,4 +50,9 @@
         android:title="@string/language"
         android:key="language"/>
 
+    <Preference
+        android:icon="@drawable/ic_menu_about"
+        android:title="关于"
+        android:key="about"/>
+
 </PreferenceScreen>
